Fixed navbar static collapsing

--- a/less/base-admin-responsive.less
+++ b/less/base-admin-responsive.less
@@ -138,12 +138,6 @@
 
 @media (min-width: 768px) and (max-width: 979px) {
 	
-	.navbar-fixed-top {
-		position: static;
-		
-		margin-bottom: 0;
-	}
-	
 	.subnavbar {
 	}
 	
